--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<%- include('partials/header.ejs') %>
+ 
 <body>
-    <h1>Página inicial</h1>
+    <%- include('partials/navbar.ejs') %>
+    <div class="container d-flex flex-column min-vh-100 mt-3">
+        <hr>
+        <h1>Perguntas</h1>
+        <hr>
+        <a href="/perguntar" class="btn btn-primary w-25">Realizar Pergunta</a>
+        <hr>
+       <% perguntas.forEach(pergunta => { %>
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h3><%= pergunta.titulo %></h3>
+                    <p class="text-body-tertiary"><%= moment(pergunta.createdAt).fromNow() %></p>
+                    <p><%= pergunta.descricao %></p>
+                </div>
+                <div class="card-footer">
+                    <a href="/pergunta/<%= pergunta.id %>" class="btn btn-primary">Responder</a>
+                </div>
+            </div>
+        <% }) %>
+    </div>
 </body>
-</html>
+ 
+<%- include('partials/footer.ejs') %>
