Titulo da Resposta

--- a/views/pagina-pergunta.ejs
+++ b/views/pagina-pergunta.ejs
@@ -2,6 +2,11 @@
 
 <body>
     <%- include('partials/navbar.ejs') %>
+
+    <div class='container d-flex flex-column min-vh-100'
+        <hr>
+        <h1><%= pergunta.titulo %></h1>
+        <p><%= pergunta.descricao %></p>
 </body>
 
 <%- include('partials/footer.ejs') %>
