--- a/views/pagina-pergunta.ejs
+++ b/views/pagina-pergunta.ejs
@@ -3,10 +3,33 @@
 <body>
     <%- include('partials/navbar.ejs') %>
 
-    <div class='container d-flex flex-column min-vh-100'
+    <div class='container d-flex flex-column min-vh-100' >
         <hr>
         <h1><%= pergunta.titulo %></h1>
         <p><%= pergunta.descricao %></p>
+        <hr>
+        <form method="POST" action="/responder">
+            <h3>Deixe sua Resposta</h3>
+            <hr>
+            <textarea placeholder="Escreva sua resposta aqui" class="form-control" name="corpo"></textarea>
+            <input type="hidden" name="perguntaId" value="<%= pergunta.id %>">
+            <br>
+            <button type="submit" class="btn btn-primary">Responder</button>
+        </form>
+        <hr>
+        Respostas
+        <hr>
+
+        <% respostas.forEach(resposta => { %>
+            <div class="card mb-2">
+                <div class="card-body">
+                    <p class="text-body-tertiary"><% moment(resposta.createAt).fromNow() %></p>
+                    <p><%= resposta.corpo %></p>
+                </div>
+            </div>
+        <% }) %>
+    </div>
+
 </body>
 
 <%- include('partials/footer.ejs') %>
